<resources>
    <string name="app_name">Converter</string>
    <string name="internet_connection_without_internet">Internet connection without internet</string>
    <string name="first_start_error">Internet connection is required for the first launch of the application</string>
    <string name="database_error">The database is empty. Internet connection required.</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="del">Del</string>
    <string name="name_of_currency">NAME</string>
    <string name="code_of_currency">CODE</string>
    <string name="value">VALUE</string>
    <string name="status_app">app status</string>
    <string name="dot_in_line">Dot has in line</string>
    <string name="last_update">Last update: </string>
    <string name="code">CODE</string>
    <string name="currentValue">99.99</string>
    <string name="previousValue">88.88</string>
    <string name="nominal">for</string>
    <string name="day_night_theme_switcher">DayNight theme switcher</string>
    <string name="switch_currency_description">SwitchCurrencyFromOnTo</string>
    <string name="dataBaseIsActual">Database is actual</string>
    <string name="dataBaseWasUpdated">Database has been updated</string>
    <string name="offline">No network connection</string>
    <string name="online">Connected</string>
    <string name="error">ERROR</string>
    <string name="string_limit">Maximum line length</string>
    <string name="after_dots_symbol_limit">Maximum numbers after dot</string>
    <string name="copy_to_clipboard">The value is copied to the clipboard</string>
    <string name="clipboardstring_1">For </string>
    <string name="clipboardstring_2"> you can buy </string>
    <string name="clipboardstring_3"> at the rate of the Central Bank of the Russian Federation dated: </string>
    <string name="close">Close</string>
    <string name="sym">SYM</string>
    <string name="fail_on_update">Update was failed</string>
</resources>