<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal"
    android:layout_margin="10dp"
    >
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/code"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/code_of_currency"/>
    <LinearLayout
        android:layout_gravity="center_vertical"
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.textview.MaterialTextView
            android:layout_weight="2"
            android:id="@+id/nominal_of_currency"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/colorNominal"
            android:gravity="start|bottom"
            android:text="@string/nominal"
            tools:ignore="NestedWeights" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_weight="5"
            android:id="@+id/currencyName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="14sp"
            android:textColor="@color/textColor"
            android:gravity="start|top"
            android:textStyle="normal"
            android:text="@string/name_of_currency"
            android:ellipsize="end"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        >
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/currency_value"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textStyle="normal"
            android:textSize="24sp"
            android:textColor="@color/textColor"
            android:gravity="bottom|end"
            android:text="@string/value"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/difference_value"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textAlignment="gravity"
            android:gravity="end|top"
            android:text="@string/value"/>

    </LinearLayout>



</LinearLayout>

